# ctest

./: CMakeLists.txt
example/: example.c
include/ctest/: assert.h  ctest.h  log.h
src/: ctest.c
